update News for admin

--- a/src/css/admin/news.css
+++ b/src/css/admin/news.css
@@ -27,3 +27,27 @@
   font-weight: 600;
   font-size: 25px;
 }
+
+/* #card-title{
+  font-size: 16px;
+  white-space: nowrap;      
+  overflow: hidden;          
+  text-overflow: ellipsis;
+  max-width: 30vh;
+  max-height: 20vh;
+} */
+
+
+#card-title {
+  font-size: 16px;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;      
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+line-height: 1.5;
+}
+
+#space{
+  margin-bottom: 20px;
+}
