--- a/src/css/admin/news_add.css
+++ b/src/css/admin/news_add.css
@@ -21,3 +21,23 @@
   min-height: 300px;
   max-height: 500px;
 }
+
+.cropContainer {
+  position: relative;
+  width: 100%;
+  height: 400px;
+  background: #333;
+}
+
+.controls {
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+  margin-top: 16px;
+}
+
+.sliderContainer {
+  display: flex;
+  flex: 1;
+  align-items: center;
+}
