--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,28 +1,6 @@
 .header-component {
-  background-color: #18756a;
-  height: 12vh;
+  background-color: #38419d;
   color: #fff;
-  padding: 20px;
-
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
-    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  padding: 5px;
 }
 
-.navbar-brand {
-  color: white;
-}
-
-/* .user-icon{
-    width: 60px;
-    height: 60px;
-} */
-
-.icon {
-  font-size: 24px;
-  z-index: 1;
-  color: white;
-}
-
-.layout-button{
-    display: flex;
-}
