updata page infomation & infomation_edit for role teacher

--- a/src/css/header.css
+++ b/src/css/header.css
@@ -4,3 +4,23 @@
   padding: 5px;
 }
 
+.header-inner {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start; /* เริ่มต้นจากซ้าย */
+  gap: 1rem; /* ช่องว่างระหว่าง item */
+  /* position: relative; */
+}
+
+/* ให้ปุ่ม Login อยู่ด้านขวาสุด */
+.btn-login {
+
+}
+
+.header-inner {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+
+
