--- a/src/css/admin/course_detail.css
+++ b/src/css/admin/course_detail.css
@@ -1,6 +1,6 @@
 #text-header-coures {
   text-align: start;
-  color: #18756a;
+  color: #38419d;
   font-weight: bold;
   font-size: 16px;
   margin-top: 20px;
