--- a/src/css/admin/course_edit.css
+++ b/src/css/admin/course_edit.css
@@ -1,9 +1,9 @@
 #btn-course {
   color: white;
-  background-color: #18756a;
+  background-color: #38419d;
 }
 
 :hover#btn-course {
   color: white;
-  background-color: #0e4a43;
+  background-color: #38419d;
 }
