--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -1,5 +1,6 @@
 .footer-component {
-  background-color: #38419d;
+  background-color: #2e357f;
+  /* background-color: #38419d; */
   color: white;
   padding: 5px 10px; /* ลด padding ลง */
   width: 100%;
