--- a/src/css/menu.css
+++ b/src/css/menu.css
@@ -1,17 +1,30 @@
-#menubar{
-    background-color: #E7E7E7;
+#menubar {
+  background-color: #E7E7E7;
 }
 
-#display-menu{
-    display: flex;
-    justify-items: start;
+#display-menu {
+  display: flex;
+  justify-items: start;
 }
 
-
-#btn-menu:hover{
-    background-color: #18756a;
-    color: white;
-}
 #btn-menu {
-    background-color: white;
+  background-color: white;
+  text-align: left;
+  padding-left: 20px; /* ชิดซ้ายมากขึ้น */
+  color: #333;
+  border: none;
+  /* border-radius: 0; */
+}
+
+/* hover effect */
+#btn-menu:hover {
+  background-color: #0d6efd;
+  color: white;
+}
+
+/* active tab style */
+#btn-menu.active {
+  background-color: #0d6efd;
+  color: white;
+  /* font-weight: bold; */
 }
