--- a/src/css/admin/event.css
+++ b/src/css/admin/event.css
@@ -13,3 +13,11 @@
   font-size: 0.85rem;
   color: #fff;
 }
+
+.event-title {
+  padding: 10px;
+  font-weight: 600;
+  font-size: 24px;
+  color: #1e3a8a;
+  text-align: left;
+}
