--- a/src/css/course.css
+++ b/src/css/course.css
@@ -1,9 +1,16 @@
+#course-title {
+  padding: 10px;
+  font-weight: 600;
+  font-size: 24px;
+  color: #1e3a8a;
+  text-align: left;
+}
+
 .course-card-container {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   gap: 20px;
 }
-
 
 .course-card {
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
