update all project

--- a/src/css/admin/user.css
+++ b/src/css/admin/user.css
@@ -5,3 +5,18 @@
   color: #1e3a8a;
   text-align: left;
 }
+
+.btn-user {
+  color: white;
+  background-color: #1e40af;
+  padding: 10px 20px;
+  border-radius: 5px;
+  text-decoration: none;
+  font-weight: 500;
+  transition: background-color 0.2s ease-in-out;
+}
+
+.btn-user:hover {
+  background-color: #173390;
+  color: white;
+}
