--- a/src/css/document.css
+++ b/src/css/document.css
@@ -35,6 +35,7 @@ h3 {
   font-size: 1.1rem;
   transition: background-color 0.3s ease;
   cursor: default;
+  text-align: left;
 }
 
 .list-group-item:hover {
