--- a/src/css/header.css
+++ b/src/css/header.css
@@ -2,25 +2,17 @@
   background-color: #38419d;
   color: #fff;
   padding: 5px;
+
+  /* ⭐ สำคัญมาก */
+  position: relative;
+  z-index: 1050;
+  overflow: visible;
 }
 
 .header-inner {
   display: flex;
   align-items: center;
-  justify-content: flex-start; /* เริ่มต้นจากซ้าย */
-  gap: 1rem; /* ช่องว่างระหว่าง item */
-  /* position: relative; */
-}
-
-/* ให้ปุ่ม Login อยู่ด้านขวาสุด */
-.btn-login {
-
-}
-
-.header-inner {
-  display: flex;
-  align-items: center;
+  justify-content: flex-end; /* ปุ่มอยู่ขวา */
   gap: 1rem;
+  overflow: visible;
 }
-
-
